--- a/src/styles/4-layout/_footer.sass
+++ b/src/styles/4-layout/_footer.sass
@@ -8,18 +8,19 @@ footer
     .footer-sub
       display: flex
       flex-direction: column
-      font-size: toRem(20)
+      font-size: toRem(16)
       h4
-        font-size: toRem(32)
-        margin-bottom: 30px
+        font-size: toRem(20)
+        margin-bottom: 20px
         margin-top: 0
         color: $orangeHighlight
       a
         color: white
-      ul 
+      ul
         padding: 0
         margin-top: 0
         list-style: none
+        font-weight: 300
       .footer-socialss
         display: flex
         flex-direction: column
@@ -27,6 +28,7 @@ footer
         a
           color: white
           margin-bottom: 5px
+          font-weight: 300
           svg
             margin-right: 10px
 @media screen and ( max-width: 775px )
