--- a/src/styles/5-modules/ContactPage/_contactPageBanner.sass
+++ b/src/styles/5-modules/ContactPage/_contactPageBanner.sass
@@ -1,17 +1,18 @@
 .contact-page-banner-wrap
-  padding-top: 30px
-  padding-bottom: 30px
+  font-family: poppins
   background-color: $callToActionColor
   a
+    &:hover
+      text-decoration-color: $orangeHighlight
     .contact-page-banner
       display: flex
       justify-content: center
       p
         margin-top: 0
         margin-bottom: 0
-        font-size: toRem(30)
+        font-size: toRem(20)
         color: $headerFooterColor
-        line-height: 55px
+        line-height: 30px
       .contact-page-arrow-link
         display: flex
 
@@ -30,24 +31,4 @@
   .contact-page-banner-wrap
     padding-right: 8%
     padding-left: 8%
-    a
-      .contact-page-banner
-        p
-          margin-right: 0
-          font-size: 40px
-          line-height: 45px
-        .contact-page-arrow-link
-          font-size: 25px
-          p
-            line-height: 35px
-@media screen and ( max-width: 775px )
-  .contact-page-banner-wrap
-    a 
-      .contact-page-banner
-        p
-          font-size: 32px
-          line-height: 34px
-        .contact-page-arrow-link
-          p
-            font-size: 29px    
-            line-height: 32px        
+    
