contact page fixed

--- a/src/styles/6-pages/_contactInfo.sass
+++ b/src/styles/6-pages/_contactInfo.sass
@@ -4,7 +4,8 @@
   .contact-wrap
     margin-left: auto
     margin-right: auto
-    margin-bottom: 100px
+    margin-bottom: 300px
+    margin-top: 300px
     padding-left: 10%
     padding-right: 10% 
     max-width: 1250px
@@ -12,7 +13,7 @@
     // grid-column-gap: 60px 
     // grid-template-columns: auto auto
     .location
-      margin-left: auto
+      margin-left: 40px
     .contact-info
       color: $headerFooterColor
       font-size: 22px
@@ -60,5 +61,6 @@
       flex-direction: column
       .location
         margin-left: 0
+        margin-top: 100px
 
     
