--- a/src/styles/4-layout/_headerMobile.sass
+++ b/src/styles/4-layout/_headerMobile.sass
@@ -30,18 +30,14 @@
     display: none
     background-color: $headerFooterColor
     color: white
-    box-shadow: 1px 10px 29px 5px rgba(0,0,0,0.75)
-    -webkit-box-shadow: 1px 10px 29px 5px rgba(0,0,0,0.75)
-    -moz-box-shadow: 1px 10px 29px 5px rgba(0,0,0,0.75)
+    box-shadow: 1px 2px 11px 5px rgba(0,0,0,0.5)
+    -webkit-box-shadow: 1px 2px 11px 5px rgba(0,0,0,0.5)
+    -moz-box-shadow: 1px 2px 11px 5px rgba(0,0,0,0.5)
     a 
       background-color: #5D666F
       color: white
       width: 100%
       text-align: center
-    
-      // border-bottom: 1px solid gray
-      // border-left: 1px solid gray
-      // border-right: 1px solid gray
       &:hover
         background-color: $callToActionColor
         text-decoration: none
@@ -64,7 +60,14 @@
     display: block
     .header-mobile 
       display: flex
+      align-items: center
       .header-mobile-wrap
+        display: flex
+        justify-content: center
+        h1
+          height: auto
+          font-weight: 400
+          font-size: toRem(32)
         .nav-mobile-icon  
           display: flex
           justify-content: center
