--- a/src/styles/5-modules/HomePage/_recentProjectItem.sass
+++ b/src/styles/5-modules/HomePage/_recentProjectItem.sass
@@ -1,83 +1,75 @@
 .recent-project-wrap  
-  position: relative;
+  font-family: poppins
+  position: relative
   a
     .recent-project-item
-      height: 600px;
-      width: 450px;
-      margin-bottom: 40px;
-      background-size: cover;
+      height: 500px
+      width: 350px
+      margin-bottom: 40px
+      background-size: cover
       .designer-info-wrap
-        display: flex;
-        margin-top: auto;
-        height: 100%;
-        position: relative;
+        display: flex
+        margin-top: auto
+        height: 100%
+        position: relative
         .designer-info
-          padding-left: 30px;
-          position: absolute;
-          bottom: 0;
-          display: flex;
-          flex-direction: column;
-          align-items: flex-start;
-          background-color: white;
-          width: 60%;
+          padding-left: 30px
+          position: absolute
+          bottom: 0
+          left: 0
+          display: flex
+          flex-direction: column
+          align-items: flex-start
+          background-color: white
+          width: 60%
           h5 
-            font-size: 25px;
-            font-weight: 400;
-            margin-top: 20px;
-            margin-bottom: 10px;
+            font-size: toRem(28)
+            font-weight: 400
+            margin-top: 20px
+            margin-bottom: 10px
           h3 
-            font-size: 20px
-            margin-top: 0;
-            margin-bottom: 50px;
+            font-size: toRem(12)
+            margin-top: 0
+            margin-bottom: 10px
     &:hover
-      color: black;
+      color: black
       .colored-rectangle
-        left: 3%;
-        top: -3%;
+        left: 4%
+        top: -3%
     .colored-rectangle
-      transition: .4s ease-in-out;
+      transition: .4s ease-in-out
       position: absolute
-      left: 1%;
-      top: -1%;
-      width: 450px;
-      height: 600px;
-      background-color: rgba(red($orangeHighlight), green($orangeHighlight), blue($orangeHighlight), 0.7);
-      z-index: -1;
+      left: 2%
+      top: -1%
+      width: 350px
+      height: 500px
+      background-color: rgba(red($orangeHighlight), green($orangeHighlight), blue($orangeHighlight), 0.7)
+      z-index: -1
 @media screen and ( max-width: 1300px )
   .recent-project-wrap
     a  
       .recent-project-item
-        height: 500px;
+        height: 500px
       .colored-rectangle
         height: 500px
-        width: 100%;
-@media screen and ( max-width: 990px )
-  .recent-project-wrap
-    a  
-      .recent-project-item
-        margin-bottom: 0;
-        height: 400px;
-        max-width: 100vw;
-        .designer-info-wrap
-          .designer-info
-            h3 
-              font-size: 20px;
-      .colored-rectangle
-        height: 400px
-        width: 100%;
+        width: 100%
 @media screen and ( max-width: 550px )
   .recent-project-wrap
-    max-width: 100vw;
+    max-width: 100vw
     a  
       .recent-project-item
-        height: 300px;
+        height: 300px
         .designer-info-wrap
           .designer-info
-            padding-left: 15px;
+            border-top: 1px solid $orangeHighlight 
+            border-right: 1px solid $orangeHighlight 
+            left: -1px
+            bottom: -1px
+            padding-left: 15px
             h3 
-              font-size: 1em;
+              font-size: 1em
       .colored-rectangle
-        display: none;
+        display: none
     
 
 
