--- a/src/styles/5-modules/ProjectPage/_projectPageProject.sass
+++ b/src/styles/5-modules/ProjectPage/_projectPageProject.sass
@@ -1,37 +1,38 @@
 .project-page-project-wrap
+  font-family: poppins
   a
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 15%;
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    margin-bottom: 15%
     &:hover
-      text-decoration: none;
-      color: black;
+      text-decoration: none
+      color: black
     .project-page-project
       .project-pic
-        -webkit-box-shadow: 0px 0px 14px 8px rgba(0,0,0,.3); 
-        box-shadow: 0px 0px 14px 8px rgba(0,0,0,.3);
-        height: 500px;
-        width: 500px;
-        max-width: 500px;
-        background-size: cover;
-        transition: .5s ease-in-out;
+        -webkit-box-shadow: 0px 0px 14px 8px rgba(0,0,0,.3) 
+        box-shadow: 0px 0px 14px 8px rgba(0,0,0,.3)
+        height: 500px
+        width: 500px
+        max-width: 500px
+        background-size: cover
+        transition: .5s ease-in-out
         &:hover
-          transform: scale(1.1);
+          transform: scale(1.1)
         &::mouse
       h3
-        border-bottom: 1px solid black;
-        padding-bottom: 30px;
-        margin-bottom: 0;
-        margin-top: 1em;
+        border-bottom: 1px solid black
+        padding-bottom: 30px
+        margin-bottom: 0
+        margin-top: 1em
 
 @media screen and ( max-width: 625px )
   .project-page-project-wrap
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 0
+    margin-right: 0
     a
       .project-page-project
         .project-pic
-          height: 70vw;
-          width: 100%;
+          height: 70vw
+          width: 100%
