--- a/src/styles/5-modules/_hero.sass
+++ b/src/styles/5-modules/_hero.sass
@@ -1,55 +1,56 @@
 .hero
-  display: grid;
-  grid-template-columns: 5% 95%;
-  grid-template-rows: 2fr  1fr;
-  height: 600px;
-  width: 100%;
+  font-family: poppins
+  display: grid
+  grid-template-columns: 5% 95%
+  grid-template-rows: 2fr  1fr
+  height: 600px
+  width: 100%
  
   .gray-bar
-    grid-column: 1;
-    grid-row: 1 / 2;
-    background-color: $headerFooterColor;
+    grid-column: 1
+    grid-row: 1 / 2
+    background-color: $headerFooterColor
   .white-bar
-    grid-column: 1;
-    grid-row: 1 / 2;
-    background-color: $headerFooterColor;
+    grid-column: 1
+    grid-row: 1 / 2
+    background-color: $headerFooterColor
 
   .hero-pic
-    padding-left: 4%;
-    padding-top: 170px;
-    color: white;
-    font-size: 18px;
-    grid-column: 2;
-    grid-row: 1 / 3;
-    background-color: $callToActionColor;
+    padding-left: 4%
+    padding-top: 170px
+    color: white
+    font-size: 18px
+    grid-column: 2
+    grid-row: 1 / 3
+    background-color: $callToActionColor
     h3
-      padding-left: 55px;
-      margin-top: 0;
-      margin-bottom: 0;
-      text-transform: uppercase;
-      font-size: 40px;
+      padding-left: 55px
+      margin-top: 0
+      margin-bottom: 0
+      text-transform: uppercase
+      font-size: 40px
     .bar-blurb
-      margin-top: 30px;
-      display: flex;
-      flex-direction: row;
+      margin-top: 30px
+      display: flex
+      flex-direction: row
       .bar
-        margin-top: 12px;
+        margin-top: 12px
         width: 40px
-        height: 6px;
-        background-color: white;
+        height: 6px
+        background-color: white
       p
-        margin-left: 15px;
-        margin-top: 0;
-        font-size: 20px;
-        line-height: 30px;
+        margin-left: 15px
+        margin-top: 0
+        font-size: 20px
+        line-height: 30px
     span
-      padding-left: 55px;
+      padding-left: 55px
 @media screen and ( max-width: 765px ) 
   .hero
-    grid-template-columns: 100%;
+    grid-template-columns: 100%
     .gray-bar
-      display: none;
+      display: none
     .white-bar
-      display: none;
+      display: none
     .hero-pic
-      grid-column: 1;
+      grid-column: 1
