added animation and color

--- a/src/styles/1-helpers/_animation.sass
+++ b/src/styles/1-helpers/_animation.sass
@@ -8,4 +8,11 @@
     width: 100%
   100% 
     width: 0%
+@keyframes slideInHero
+  0%
+    color: $callToActionColor
+    margin-left: -6%
+  100%
+    color: white
+    margin-left: 0
   
