--- a/src/styles/5-modules/_hero.sass
+++ b/src/styles/5-modules/_hero.sass
@@ -5,7 +5,6 @@
   grid-template-rows: 2fr  1fr
   height: 600px
   width: 100%
- 
   .gray-bar
     grid-column: 1
     grid-row: 1 / 2
@@ -16,13 +15,15 @@
     background-color: $headerFooterColor
 
   .hero-pic
+    overflow: hidden
     padding-left: 4%
     padding-top: 170px
-    color: white
     font-size: 18px
     grid-column: 2
     grid-row: 1 / 3
     background-color: $callToActionColor
+    color: white
+    animation: slideInHero 3s ease
     h3
       padding-left: 55px
       margin-top: 0
@@ -37,7 +38,7 @@
         margin-top: 12px
         width: 40px
         height: 6px
-        background-color: white
+        background-color: $orangeHighlight
       p
         margin-left: 15px
         margin-top: 0
