--- a/src/styles/6-pages/_projectPage.sass
+++ b/src/styles/6-pages/_projectPage.sass
@@ -5,25 +5,27 @@
   flex-direction: column
   justify-content: center
   .project-page-wrap
-    margin: 4% 3%
+    margin: 8% 3% 4% 3%
     display: flex
     flex-direction: column
     justify-content: center
     align-items: center
     h1
-      text-transform: uppercase
       margin-top: 0
       margin-bottom: 4%
     .project-page-projects
       margin-bottom: 0
       display: grid
       grid-template-columns: 515px 515px
-      grid-gap: 30px
+      gap: 30px
+      animation: gapSlide 1s linear
+
 @media screen and ( max-width: 1160px )
   .project-page
     .project-page-wrap
       .project-page-projects
         grid-template-columns: 1fr
+        animation: none
 @media screen and ( max-width: 700px )
   .project-page
     .project-page-wrap
